# oracle-cloud-scripts

./: README.md  create_ampere_a1.py  pyproject.toml
create_ampere_p1/: __init__.py  __main__.py
